bootstrap/kubernetes/apps/tools/zigbee2mqtt/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: tools
spec:
  type: ClusterIP
  selector:
    app: zigbee2mqtt
  ports:
    - port: 8080
      targetPort: 8080
      name: frontend
